--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,12 @@
 
 env/dev/.terraform.lock.hcl
 env/dev/.terragrunt-cache
+
 env/stage/jenkins/.terragrunt-cache/
 env/stage/jenkins/.terraform.lock.hcl
-env/stage/.terraform.lock.hcl
-env/stage/.terragrunt-cache
+
+env/stage/infrastructure/.terraform.lock.hcl
+env/stage/infrastructure/.terragrunt-cache/
+
 env/prod/.terraform.lock.hcl
-env/prd/.terragrunt-cache
+env/prd/.terragrunt-cache/
