--- a/ci-cd/deploy/Jenkinsfile
+++ b/ci-cd/deploy/Jenkinsfile
@@ -6,53 +6,57 @@ pipeline {
         choice(name: 'ENV', choices: ['dev', 'stage', 'prod'], description: 'Select environment')
     }
 
+
     environment {
         AWS_REGION = "eu-central-1"
     }
+
 
     stages {
 
         stage('Checkout Repository') {
             steps {
-                echo "Checking out repository..."
                 checkout scm
             }
         }
 
+
         stage('Set Environment Variables') {
             steps {
                 script {
+
                     if (params.ENV == 'dev') {
                         env.TERRAGRUNT_DIR = "env/dev"
-                        env.AWS_ROLE_ARN = "arn:aws:iam::506087227011:role/TerraformRoleDev"
-                        env.AWS_CREDENTIALS_ID = "aws-dev-account"
+                        credsId = "aws-dev-account-id"
+                        env.AWS_CREDENTIALS_ID = "aws-dev-account-key"
 
-                    } else if (params.ENV == 'prod') {
+                    }
+
+					else if (params.ENV == 'prod') {
                         env.TERRAGRUNT_DIR = "env/prod"
-                        env.AWS_ROLE_ARN = "arn:aws:iam::896015496924:role/TerraformRoleProd"
-                        env.AWS_CREDENTIALS_ID = "aws-prod-account"
+                        credsId = "aws-prod-account-id"
+                        env.AWS_CREDENTIALS_ID = "aws-prod-account-key"
 
-                    } else if (params.ENV == 'stage') {
-						env.TERRAGRUNT_DIR = "env/stage/infr"
-                        env.AWS_ROLE_ARN = "arn:aws:iam::165015980393:role/TerraformRoleStage"
-                        env.AWS_CREDENTIALS_ID = "aws-stage-account"
+                    }
 
-                    } else {
+					else if (params.ENV == 'stage') {
+						env.TERRAGRUNT_DIR = "env/stage/infrastructure"
+                        credsId = "aws-stage-account-id"
+                        env.AWS_CREDENTIALS_ID = "aws-stage-account-key"
+
+                    }
+
+					else {
                         error "Unknown environment: ${params.ENV}"
                     }
 
-                    echo "Using environment: ${params.ENV}"
-                    echo "Terragrunt directory: ${env.TERRAGRUNT_DIR}"
-                    echo "Role ARN: ${env.AWS_ROLE_ARN}"
+					withCredentials([string(credentialsId: credsId, variable: 'AWS_ACCOUNT_ID')]) {
+						env.AWS_ROLE_ARN = "arn:aws:iam::${AWS_ACCOUNT_ID}:role/TerraformRole${params.ENV.capitalize()}"
+					}
                 }
             }
         }
 
-        stage('Terragrunt Version') {
-            steps {
-                sh "terragrunt --version"
-            }
-        }
 
         stage('Terragrunt Init & Plan') {
             steps {
@@ -68,14 +72,17 @@ pipeline {
             }
         }
 
+
         stage('Terragrunt Apply') {
             steps {
                 script {
+
                     def userInput = input(
                         id: 'ProceedApply', message: "Apply changes to ${params.ENV}?", parameters: [
                             [$class: 'BooleanParameterDefinition', defaultValue: true, description: 'Check to proceed', name: 'Confirm']
                         ]
                     )
+
                     if (userInput) {
                         withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', credentialsId: "${env.AWS_CREDENTIALS_ID}"]]) {
                             sh """
@@ -85,7 +92,9 @@ pipeline {
                                 terragrunt apply -auto-approve
                             """
                         }
-                    } else {
+                    }
+
+					else {
                         echo "Apply skipped"
                     }
                 }
@@ -93,4 +102,3 @@ pipeline {
         }
     }
 }
-
